--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="https://instagram.com/crazy_iz_ada"><button>Instagram</button></a>
           <a href="https://twitter.com/Crazyizada1"><button>Twitter</button></a>
           <a href="https://last.fm/ru/user/Psix001"><button>Last.fm</button></a>
-          <a href="https://github.com/Crazy_iz_ada"><button>Github</button></a>
+          <a href="https://github.com/Crazy-iz-ada"><button>Github</button></a>
         </div>
         <a id="showHideBtn" onclick="showHideVideo()">Hide Video</a>
       </div>
