--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </h1>
         <span class="avatar"></span>
         <div class="buttons-block">
-          <a href="https://vk.com/crazy_iz_ada"><button>VK</button></a>
+          <a href="https://vk.com/qikert88"><button>VK</button></a>
           <a href="https://t.me/crazy_iz_ada"><button>Telegram</button></a>
-          <a href="https://instagram.com/crazy_iz_ada"><button>Instagram</button></a>
+          <a href="https://instagram.com/_qikert_"><button>Instagram</button></a>
           <a href="https://twitter.com/Crazyizada1"><button>Twitter</button></a>
           <a href="https://last.fm/ru/user/Psix001"><button>Last.fm</button></a>
           <a href="https://github.com/Crazy-iz-ada"><button>Github</button></a>
