--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Crazy_iz_ada's Landing Page">
-    <link rel="canonical" href="http://crazy-iz-ada.github.io">
-    <title>Crazy_iz_ada</title>
+    <link rel="canonical" href="http://crazyizada.github.io">
+    <title>Project Nemesis</title>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/main/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/main/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/main/favicon-16x16.png">
+    <link rel="manifest" href="favicons/main/site.webmanifest">
+    <link rel="mask-icon" href="favicons/main/safari-pinned-tab.svg" color="#ff6464">
+    <link rel="shortcut icon" href="favicons/main/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Project Nemesis">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Project Nemesis">
+    <meta name="msapplication-TileColor" content="#ff6464">
+    <meta name="msapplication-config" content="favicons/main/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Styles, Scripts and Ubuntu Font -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&display=swap" rel="stylesheet">
@@ -13,6 +27,7 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <!-- poster="assets/poster.jpg" -->
     <video id="videobcg" class="visible" preload autoplay loop muted>
 			<source src="assets/2.mp4">
     </video>
@@ -20,7 +35,7 @@
     	<div id="typing-text">
         <p>Welcome here!</p>
         <h1>
-          <a class="typewrite" data-period="2000" data-type='["Crazy_iz_ada", "UI/UX Designer", "Front-End Developer"]'>
+          <a class="typewrite" data-period="2000" data-type='["Crazy_iz_ada", "Creator of Project Hades", "Designer", "Front-End Developer"]'>
             <span class="wrap">Loading...</span>
           </a>
         </h1>
@@ -31,7 +46,7 @@
           <a href="https://instagram.com/_qikert_"><button>Instagram</button></a>
           <a href="https://twitter.com/Crazyizada1"><button>Twitter</button></a>
           <a href="https://last.fm/ru/user/Psix001"><button>Last.fm</button></a>
-          <a href="https://github.com/Crazy-iz-ada"><button>Github</button></a>
+          <a href="https://github.com/Crazy_iz_ada"><button>Github</button></a>
         </div>
         <a id="showHideBtn" onclick="showHideVideo()">Hide Video</a>
       </div>
