--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="https://instagram.com/_qikert_"><button>Instagram</button></a>
           <a href="https://twitter.com/Crazyizada1"><button>Twitter</button></a>
           <a href="https://last.fm/ru/user/Psix001"><button>Last.fm</button></a>
-          <a href="https://github.com/Crazy_iz_ada"><button>Github</button></a>
+          <a href="https://github.com/crazy-iz-ada"><button>Github</button></a>
         </div>
         <a id="showHideBtn" onclick="showHideVideo()">Hide Video</a>
       </div>
