--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     	<div id="typing-text">
         <p>Welcome here!</p>
         <h1>
-          <a class="typewrite" data-period="2000" data-type='["Crazy_iz_ada", "Creator of Project Hades", "Designer", "Front-End Developer"]'>
+          <a class="typewrite" data-period="2000" data-type='["Defender", "Creator of Project Hades", "Designer", "Front-End Developer"]'>
             <span class="wrap">Loading...</span>
           </a>
         </h1>
