--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Crazy_iz_ada's Landing Page">
     <link rel="canonical" href="http://crazyizada.github.io">
-    <title>Project Nemesis</title>
+    <title>Project defender</title>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/main/apple-touch-icon.png">
