--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </h1>
         <span class="avatar"></span>
         <div class="buttons-block">
-          <a href="https://vk.com/defender18"><button>VK</button></a>
-          <a href="https://t.me/qikert"><button>Telegram</button></a>
-          <a href="https://instagram.com/d.e.fender"><button>Instagram</button></a>
+          <a href="https://vk.com/defxgod"><button>VK</button></a>
+          <a href="https://t.me/defxgod"><button>Telegram</button></a>
+          <a href="https://instagram.com/defxgod"><button>Instagram</button></a>
           <a href="https://twitter.com/Crazyizada1"><button>Twitter</button></a>
           <a href="https://last.fm/ru/user/Psix001"><button>Last.fm</button></a>
           <a href="https://github.com/crazy-iz-ada"><button>Github</button></a>
